deploy/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loginpage-deployment
  labels:
    app: login
spec:
  selector:
    matchLabels:
      app: login
  replicas: 1
  template:
    metadata:
      labels:
        app: login
    spec:
      containers:
      - name: hello
        image: login:latest
        imagePullPolicy: Never
        ports:
        - name: http
          containerPort: 3000 
---
apiVersion: v1 
kind: Service
metadata:
  name: loginpage-service
spec:
  selector:
    app: login
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 3000 		
    targetPort: 3000
