deploy/ingress.yaml
apiVersion : networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-page
spec:
  rules:
  - host: www.loginpage.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: login-service 
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: login-webservice
            port:
              number: 80
